<resources>
    <string name="app_name">CountDown Timer</string>
    <string name="_00_30">00:30</string>
    <string name="seconds">seconds</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>

    <string name="count">Count Down Timer</string>
    <string name="_30">:30</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
</resources>